--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "rewrites": [
+    { "source": "/w/:id.js", "destination": "/w/embed.js" },
     { "source": "/((?!w/).*)", "destination": "/index.html" }
   ],
   "headers": [
@@ -10,6 +11,7 @@
       "source": "/w/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Content-Type", "value": "application/javascript" },
         { "key": "Cache-Control", "value": "public, max-age=3600" }
       ]
     }
